# SideView

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: build-native.yml
examples/: simple_browser.py
native/: CMakeLists.txt  native_webview.h
native/macos/: webview_host.mm
native/win32/: webview_host.cpp
scripts/: benchmark_frame_stream.py  build_windows.ps1
src/native_webview_widget/: __init__.py  _backend.py  widget.py
tests/: test_imports.py
