[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "native-webview-widget"
version = "0.1.0"
description = "Native WebView2/WKWebView widget for PySide6 without Qt WebEngine."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Native WebView Widget Authors" }]
dependencies = ["PySide6>=6.5"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
native_webview_widget = ["*.dll", "*.dylib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
